--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <li>High Honor Roll
         <li>Adelphi University Pre-College Program
             <!-- Education Institution -->
-            <p>Malverne High School, Lynbrook, NY</p>
+            <p>Malverne High School, Malverne, NY</p>
             <p>Expected Graduation: June 2024</p>
         </li>
     </ul>
